force-app/main/default/objects/Billing_Date__c/Billing_Date__c.object-meta.xml
<CustomObject>
    <label>Billing Date</label>
    <nameField>
        <displayFormat>BD-{0000}</displayFormat>
        <label>Billing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>