force-app/main/default/objects/Billing_Date__c/fields/Alignment_Logic__c.field-meta.xml
<CustomField>
    <fullName>Alignment_Logic__c</fullName>
    <label>Alignment Logic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>Financial Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>