force-app/main/default/objects/Billing_Date__c/fields/Instrument_Type_3__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Type_3__c</fullName>
    <label>Instrument Type 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Instrument_type_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>GP_Instrument_Type_3</valueSetName>
    </valueSet>
</CustomField>