force-app/main/default/objects/Billing_Date__c/validationRules/Start_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_End_Date</fullName>
    <active>true</active>
    <description>&quot;Start Date&quot; is always less than the &quot;End Date&quot;</description>
    <errorConditionFormula>OR( Start_Date__c  &gt;=  End_date__c,
	End_date__c &lt; Today(),
	 AND(
		Start_Date__c &lt; Today(),
		ISCHANGED(Start_Date__c)
		),
	 AND(
	Start_Date__c &lt; Today(),
	ISNEW()
		) 
	)</errorConditionFormula>
    <errorMessage>Start Date should always be less than the End Date. Past dates are not allowed.</errorMessage>
</ValidationRule>