force-app/main/default/objects/Billing_Date__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Instrument_type_1__c</columns>
    <columns>Instrument_type_2__c</columns>
    <columns>Instrument_Type_3__c</columns>
    <columns>Instrument_Type_4__c</columns>
    <columns>Alignment_Logic__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>